Implement drag-and-drop activity scheduling, PDF export sync, and UI improvements

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <button id="export-camp-button">Export Camp</button>
         </aside>
 
+        <!-- Available Activities Palette -->
+        <div id="activity-palette" style="margin: 1rem 0; display: flex; flex-wrap: wrap; gap: 0.5rem;"></div>
+
         <!-- Main content area for the scheduler -->
         <div id="scheduler-area">
             <h2 id="current-camp">Camp Scheduler</h2> <!-- This will be updated by script.js -->
@@ -72,14 +75,6 @@
                 </div>
             </div>
         </div>
-
-        <!-- Optional Drop Area Feature (hidden by default) -->
-        <section id="drop-area" style="display: none;">
-            <h2>Drop Area Feature</h2>
-            <div id="drop-box">
-                <!-- Items can be dragged and dropped here -->
-            </div>
-        </section>
     </main>
     <script src="script.js"></script>
 </body>
