Implement save/load schedule to localStorage and JSON file; add Save/Load UI buttons; improve backup and sharing

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <button id="add-global-activity-button">Add Activity</button>
             <button id="add-group-button">Add Group</button>
             <button id="export-camp-button">Export Camp</button>
+            <button id="save-schedule-button">Save Schedule</button>
+            <button id="load-schedule-button">Load Schedule</button>
         </aside>
 
         <!-- Available Activities Palette -->
@@ -43,25 +45,7 @@
 
             <!-- Container for group schedule boxes -->
             <div id="group-box">
-                <div class="group" id="group-1"> <!-- Example group, script.js adds more -->
-                    <div class="group-header">
-                        <span>Group 1</span>
-                        <i class="fas fa-undo action-icon" title="Undo"></i>
-                        <i class="fas fa-trash action-icon" title="Delete"></i>
-                        <i class="fas fa-plus action-icon" title="Add"></i>
-                    </div>
-                    <table class="group-table">
-                        <thead>
-                            <tr>
-                                <th>Time</th>
-                                <th>Activity</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <!-- Rows will be dynamically added here -->
-                        </tbody>
-                    </table>
-                </div>
+                <!-- Groups will be rendered dynamically by script.js -->
             </div>
 
             <!-- Camp Information Section -->
