Fix: synchronize camp info box with campInfo on camp change, edit, and schedule load. UX and persistence now robust.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
         <!-- Main content area for the scheduler -->
         <div id="scheduler-area">
-            <h2 id="current-camp">Camp Scheduler</h2> <!-- This will be updated by script.js -->
+            <h2 id="current-camp" style="display:inline-block; vertical-align:middle;">Camp Scheduler</h2> <!-- This will be updated by script.js -->
+            <button id="edit-camp-button" style="display:none; margin-left:10px; vertical-align:middle;">Edit Camp</button>
 
             <!-- Camp selection display -->
             <div id="camp-display" style="font-size: 1.5rem; font-weight: bold; margin-bottom: 1rem; display: flex; justify-content: center; align-items: center;">
