Enhance Camp Scheduler: activity palette management, drag-and-drop between slots, expanded color palette, UI/UX improvements

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <h1>Camp Scheduler</h1>
+        <h1>Camp Scheduler v1.0</h1>
     </header>
     <main>
         <aside id="menu">
